--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -244,11 +244,22 @@ config CPU_FREQ_DEFAULT_GOV_WHEATLEY
 	---help---
 	  Use the CPUFreq governor 'wheatley' as default.
 
+config CPU_FREQ_DEFAULT_GOV_YANKDEMAND
+	bool "yankdemand"
+	select CPU_FREQ_GOV_YANKDEMAND
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'yankdemand' as default. This allows
+	  you to get a full dynamic frequency capable system by simply
+	  loading your cpufreq low-level hardware driver.
+	  Be aware that not all cpufreq drivers support the yankdemand
+	  governor. If unsure have a look at the help section of the
+	  driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_BADASS
 	bool "badass"
 	select CPU_FREQ_GOV_BADASS
-	select CPU_FREQ_GOV_PERFORMANCE
+    select CPU_FREQ_GOV_PERFORMANCE
 	help
 	  Use the CPUFreq governor 'badass' as default. This allows
 	  you to get a full dynamic frequency capable system by simply
@@ -615,12 +626,22 @@ config CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE
 	help
 	  'lowbat_powersave' - This driver adds a new algo to save power
 
+
 config CPU_FREQ_GOV_BADASS_ALLOW_BYPASS
 	tristate "Allows bypassing phases"
 	depends on CPU_FREQ_GOV_BADASS
 	depends on CPU_FREQ_GOV_BADASS_2_PHASE
 	help
 	  'allow_bypass' - This driver adds a bypass to the phases
+
+config CPU_FREQ_GOV_YANKDEMAND
+	tristate "'yankdemand' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	help
+	  'yankdemand' - This driver adds a dynamic cpufreq policy governor.
+	  The governor is based on ondemand with just different default settings
+	  and can be achieved using ondemand with a script. This is added for
+	  simplification purposes for myself.
 
 config CPU_FREQ_GOV_DANCEDANCE
 	tristate "'dancedance' cpufreq governor"
