--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -597,6 +597,8 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-1"
+CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
@@ -659,3 +661,93 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
+
+CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_TEST is not set
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_POWERSUSPEND=y
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
+CONFIG_ASYNC_FSYNC=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
+CONFIG_MDNIE_LITE_TUNING=y
+CONFIG_MDNIE_LITE_CONTROL=y
+CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_CMA_AREAS=15
+CONFIG_MUTEX_SPIN_ON_OWNER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2496000
+CONFIG_MSM_CPU_FREQ_MIN=300000
+CONFIG_HOTPLUG_CPU=y
+CONFIG_MSM_IOMMU_VBIF_CHECK=y
+CONFIG_LSM_MMAP_MIN_ADDR=32768
+
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+# CONFIG_DEFAULT_BIC is not set
+CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
+# CONFIG_DEFAULT_RENO is not set
+CONFIG_DEFAULT_TCP_CONG="cubic"
+# CONFIG_TCP_MD5SIG is not set
+
+CONFIG_UACCESS_WITH_MEMCPY=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_KRAIT_REGULATOR=y
+CONFIG_INTELLI_THERMAL=y
+CONFIG_THERMAL_MONITOR=y
+CONFIG_KERNEL_MODE_NEON=y
+
+CONFIG_TOUCH_WAKE=y
+CONFIG_CRYPTO_LZO=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZMA=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_KERNEL_XZ=y
+CONFIG_SWAP=y
+CONFIG_SYSVIPC=y
+CONFIG_SYSVIPC_SYSCTL=y
+
+CONFIG_PM_SLEEP=y
+CONFIG_PM_SLEEP_SMP=y
