--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -656,6 +656,8 @@ CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
