--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -597,7 +597,7 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-1"
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-4"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_CPU_FREQ_TABLE=y
@@ -609,7 +609,7 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_UBERDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
