add intelli plug. Thanks Faux123

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -600,6 +600,9 @@ CONFIG_CMA_AREAS=15
 CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-1"
 CONFIG_LOCALVERSION_AUTO=n
 
+CONFIG_INTELLI_PLUG=y
+# CONFIG_MSM_HOTPLUG is not set
+
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
