msm: hotplug enabled

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -601,7 +601,7 @@ CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-1"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_INTELLI_PLUG=y
-# CONFIG_MSM_HOTPLUG is not set
+CONFIG_MSM_HOTPLUG=y
 
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
