--- a/arch/arm/boot/dts/msm8974/msm8974-sec.dtsi
+++ b/arch/arm/boot/dts/msm8974/msm8974-sec.dtsi
@@ -71,21 +71,48 @@
 
 	memory {
 		secure_mem: secure_region {
-			linux,contiguous-region;
+			linux,reserve-contiguous-region;
 			reg = <0 0xFC00000>;
 			label = "secure_mem";
 		};
 
 		adsp_mem: adsp_region {
-			linux,contiguous-region;
+			linux,reserve-contiguous-region;
 			reg = <0 0x3F00000>;
 			label = "adsp_mem";
 		};
 
 		qsecom_mem: qsecom_region {
-			linux,contiguous-region;
+			linux,reserve-contiguous-region;
 			reg = <0 0x1100000>;
 			label = "qseecom_mem";
+		};
+
+		fb_mem: fb_region {
+			linux,reserve-contiguous-region;
+			reg = <0 0x800000>;
+			label = "fb_mem";
+		};
+
+		audio_mem: audio_region {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			reg = <0 0x614000>;
+			label = "audio_mem";
+		};
+
+		peripheral_mem: peripheral_region@5d00000 {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			linux,remove-completely;
+			reg = <0x6c00000 0xa600000>;
+			label = "peripheral_mem";
+		};
+
+		camera_mem: camera_region {
+			linux,reserve-contiguous-region;
+			reg = <0 0x1E00000>;
+			label = "camera_mem";
 		};
 
 	};
@@ -214,7 +241,7 @@
 		interrupts = <0 44 0>;
 		vdd-supply = <&gdsc_venus>;
 		qcom,hfi = "venus";
-		qcom,has-ocmem;
+		qcom,ocmem-size = <524288>; /* 512 * 1024 */
 		qcom,max-hw-load = <1216800>; /* 3840 x 2160 @ 30 + 1080p @ 30*/
 	};
 
@@ -1462,20 +1489,20 @@
 
 		qcom,speed1-pvs0-bin-v0 =
 			<          0       0   0 >,
-			<  300000000  800000  72 >,
-			<  345600000  800000  83 >,
-			<  422400000  800000 101 >,
-			<  499200000  800000 120 >,
-			<  576000000  810000 139 >,
-			<  652800000  820000 159 >,
-			<  729600000  830000 180 >,
-			<  806400000  840000 200 >,
-			<  883200000  840000 221 >,
-			<  960000000  850000 242 >,
+			<  300000000  775000  72 >,
+			<  345600000  775000  83 >,
+			<  422400000  775000 101 >,
+			<  499200000  780000 120 >,
+			<  576000000  790000 139 >,
+			<  652800000  800000 159 >,
+			<  729600000  810000 180 >,
+			<  806400000  820000 200 >,
+			<  883200000  830000 221 >,
+			<  960000000  840000 242 >,
 			< 1036800000  850000 264 >,
 			< 1113600000  865000 287 >,
-			< 1190400000  890000 308 >,
-			< 1267200000  900000 333 >,
+			< 1190400000  875000 308 >,
+			< 1267200000  890000 333 >,
 			< 1344000000  900000 356 >,
 			< 1420800000  915000 380 >,
 			< 1497600000  925000 404 >,
@@ -1484,30 +1511,31 @@
 			< 1728000000  970000 482 >,
 			< 1804800000  985000 510 >,
 			< 1881600000 1000000 538 >,
-			< 1958400000 1030000 565 >,
+			< 1958400000 1015000 565 >,
 			< 2035200000 1030000 596 >,
 			< 2112000000 1045000 627 >,
 			< 2188800000 1060000 659 >,
 			< 2265600000 1075000 691 >,
-			< 2457600000  1100000 800 >;
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1170000 910 >;
 
 		qcom,speed1-pvs1-bin-v0 =
 			<          0       0   0 >,
-			<  300000000  800000  72 >,
-			<  345600000  800000  83 >,
-			<  422400000  800000 101 >,
-			<  499200000  800000 120 >,
-			<  576000000  800000 139 >,
-			<  652800000  810000 159 >,
-			<  729600000  810000 180 >,
-			<  806400000  815000 200 >,
+			<  300000000  775000  72 >,
+			<  345600000  775000  83 >,
+			<  422400000  775000 101 >,
+			<  499200000  775000 120 >,
+			<  576000000  775000 139 >,
+			<  652800000  785000 159 >,
+			<  729600000  795000 180 >,
+			<  806400000  805000 200 >,
 			<  883200000  815000 221 >,
 			<  960000000  825000 242 >,
 			< 1036800000  835000 264 >,
 			< 1113600000  850000 287 >,
-			< 1190400000  885000 308 >,
-			< 1267200000  890000 333 >,
-			< 1344000000  895000 356 >,
+			< 1190400000  860000 308 >,
+			< 1267200000  870000 333 >,
+			< 1344000000  885000 356 >,
 			< 1420800000  895000 380 >,
 			< 1497600000  905000 404 >,
 			< 1574400000  920000 430 >,
@@ -1515,29 +1543,30 @@
 			< 1728000000  950000 482 >,
 			< 1804800000  965000 510 >,
 			< 1881600000  980000 538 >,
-			< 1958400000 1005000 565 >,
+			< 1958400000  995000 565 >,
 			< 2035200000 1005000 596 >,
 			< 2112000000 1020000 627 >,
 			< 2188800000 1035000 659 >,
-			< 2265600000 1075000 691 >,
-			< 2457600000  1100000 800 >;
+			< 2265600000 1050000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1170000 910 >;
 
 		qcom,speed1-pvs2-bin-v0 =
 			<          0       0   0 >,
-			<  300000000  775000  72 >,
-			<  345600000  775000  83 >,
-			<  422400000  775000 101 >,
-			<  499200000  775000 120 >,
-			<  576000000  780000 139 >,
-			<  652800000  780000 159 >,
+			<  300000000  750000  72 >,
+			<  345600000  750000  83 >,
+			<  422400000  750000 101 >,
+			<  499200000  750000 120 >,
+			<  576000000  760000 139 >,
+			<  652800000  770000 159 >,
 			<  729600000  780000 180 >,
 			<  806400000  790000 200 >,
 			<  883200000  800000 221 >,
 			<  960000000  810000 242 >,
 			< 1036800000  820000 264 >,
 			< 1113600000  830000 287 >,
-			< 1190400000  860000 308 >,
-			< 1267200000  865000 333 >,
+			< 1190400000  840000 308 >,
+			< 1267200000  850000 333 >,
 			< 1344000000  865000 356 >,
 			< 1420800000  875000 380 >,
 			< 1497600000  885000 404 >,
@@ -1546,29 +1575,30 @@
 			< 1728000000  930000 482 >,
 			< 1804800000  945000 510 >,
 			< 1881600000  955000 538 >,
-			< 1958400000  980000 565 >,
+			< 1958400000  970000 565 >,
 			< 2035200000  980000 596 >,
 			< 2112000000  995000 627 >,
 			< 2188800000 1010000 659 >,
-			< 2265600000 1050000 691 >,
-			< 2457600000  1100000 800 >;
+			< 2265600000 1025000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1170000 910 >;
 
 		qcom,speed1-pvs3-bin-v0 =
 			<          0       0   0 >,
-			<  300000000  775000  72 >,
-			<  345600000  775000  83 >,
-			<  422400000  775000 101 >,
-			<  499200000  775000 120 >,
-			<  576000000  775000 139 >,
-			<  652800000  775000 159 >,
-			<  729600000  775000 180 >,
+			<  300000000  750000  72 >,
+			<  345600000  750000  83 >,
+			<  422400000  750000 101 >,
+			<  499200000  750000 120 >,
+			<  576000000  750000 139 >,
+			<  652800000  755000 159 >,
+			<  729600000  765000 180 >,
 			<  806400000  775000 200 >,
 			<  883200000  785000 221 >,
 			<  960000000  795000 242 >,
 			< 1036800000  805000 264 >,
 			< 1113600000  815000 287 >,
-			< 1190400000  845000 308 >,
-			< 1267200000  850000 333 >,
+			< 1190400000  825000 308 >,
+			< 1267200000  835000 333 >,
 			< 1344000000  850000 356 >,
 			< 1420800000  860000 380 >,
 			< 1497600000  870000 404 >,
@@ -1577,76 +1607,15 @@
 			< 1728000000  910000 482 >,
 			< 1804800000  925000 510 >,
 			< 1881600000  935000 538 >,
-			< 1958400000  960000 565 >,
+			< 1958400000  945000 565 >,
 			< 2035200000  960000 596 >,
 			< 2112000000  970000 627 >,
 			< 2188800000  985000 659 >,
-			< 2265600000 1020000 691 >,
-			< 2457600000  1100000 800 >;
+			< 2265600000 1000000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1150000 910 >;
 
 		qcom,speed1-pvs4-bin-v0 =
-			<          0       0   0 >,
-			<  300000000  775000  72 >,
-			<  345600000  775000  83 >,
-			<  422400000  775000 101 >,
-			<  499200000  775000 120 >,
-			<  576000000  775000 139 >,
-			<  652800000  775000 159 >,
-			<  729600000  775000 180 >,
-			<  806400000  775000 200 >,
-			<  883200000  775000 221 >,
-			<  960000000  785000 242 >,
-			< 1036800000  795000 264 >,
-			< 1113600000  805000 287 >,
-			< 1190400000  835000 308 >,
-			< 1267200000  845000 333 >,
-			< 1344000000  845000 356 >,
-			< 1420800000  845000 380 >,
-			< 1497600000  855000 404 >,
-			< 1574400000  870000 430 >,
-			< 1651200000  885000 456 >,
-			< 1728000000  895000 482 >,
-			< 1804800000  905000 510 >,
-			< 1881600000  915000 538 >,
-			< 1958400000  945000 565 >,
-			< 2035200000  945000 596 >,
-			< 2112000000  950000 627 >,
-			< 2188800000  960000 659 >,
-			< 2265600000  985000 691 >,
-			< 2457600000  1100000 800 >;
-
-		qcom,speed1-pvs5-bin-v0 =
-			<          0       0   0 >,
-			<  300000000  750000  72 >,
-			<  345600000  750000  83 >,
-			<  422400000  750000 101 >,
-			<  499200000  750000 120 >,
-			<  576000000  750000 139 >,
-			<  652800000  755000 159 >,
-			<  729600000  755000 180 >,
-			<  806400000  755000 200 >,
-			<  883200000  765000 221 >,
-			<  960000000  775000 242 >,
-			< 1036800000  785000 264 >,
-			< 1113600000  795000 287 >,
-			< 1190400000  825000 308 >,
-			< 1267200000  835000 333 >,
-			< 1344000000  835000 356 >,
-			< 1420800000  835000 380 >,
-			< 1497600000  845000 404 >,
-			< 1574400000  855000 430 >,
-			< 1651200000  865000 456 >,
-			< 1728000000  875000 482 >,
-			< 1804800000  885000 510 >,
-			< 1881600000  895000 538 >,
-			< 1958400000  915000 565 >,
-			< 2035200000  915000 596 >,
-			< 2112000000  930000 627 >,
-			< 2188800000  940000 659 >,
-			< 2265600000  960000 691 >,
-			< 2457600000  1100000 800 >;
-
-		qcom,speed1-pvs6-bin-v0 =
 			<          0       0   0 >,
 			<  300000000  750000  72 >,
 			<  345600000  750000  83 >,
@@ -1655,13 +1624,77 @@
 			<  576000000  750000 139 >,
 			<  652800000  750000 159 >,
 			<  729600000  755000 180 >,
+			<  806400000  765000 200 >,
+			<  883200000  775000 221 >,
+			<  960000000  785000 242 >,
+			< 1036800000  795000 264 >,
+			< 1113600000  805000 287 >,
+			< 1190400000  815000 308 >,
+			< 1267200000  825000 333 >,
+			< 1344000000  835000 356 >,
+			< 1420800000  845000 380 >,
+			< 1497600000  855000 404 >,
+			< 1574400000  870000 430 >,
+			< 1651200000  885000 456 >,
+			< 1728000000  895000 482 >,
+			< 1804800000  905000 510 >,
+			< 1881600000  915000 538 >,
+			< 1958400000  925000 565 >,
+			< 2035200000  935000 596 >,
+			< 2112000000  950000 627 >,
+			< 2188800000  960000 659 >,
+			< 2265600000  975000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1150000 910 >;
+
+		qcom,speed1-pvs5-bin-v0 =
+			<          0       0   0 >,
+			<  300000000  725000  72 >,
+			<  345600000  725000  83 >,
+			<  422400000  725000 101 >,
+			<  499200000  725000 120 >,
+			<  576000000  725000 139 >,
+			<  652800000  735000 159 >,
+			<  729600000  745000 180 >,
 			<  806400000  755000 200 >,
+			<  883200000  765000 221 >,
+			<  960000000  775000 242 >,
+			< 1036800000  785000 264 >,
+			< 1113600000  795000 287 >,
+			< 1190400000  805000 308 >,
+			< 1267200000  815000 333 >,
+			< 1344000000  825000 356 >,
+			< 1420800000  835000 380 >,
+			< 1497600000  845000 404 >,
+			< 1574400000  855000 430 >,
+			< 1651200000  865000 456 >,
+			< 1728000000  875000 482 >,
+			< 1804800000  885000 510 >,
+			< 1881600000  895000 538 >,
+			< 1958400000  905000 565 >,
+			< 2035200000  915000 596 >,
+			< 2112000000  930000 627 >,
+			< 2188800000  940000 659 >,
+			< 2265600000  950000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1150000 910 >;
+
+		qcom,speed1-pvs6-bin-v0 =
+			<          0       0   0 >,
+			<  300000000  725000  72 >,
+			<  345600000  725000  83 >,
+			<  422400000  725000 101 >,
+			<  499200000  725000 120 >,
+			<  576000000  725000 139 >,
+			<  652800000  725000 159 >,
+			<  729600000  735000 180 >,
+			<  806400000  745000 200 >,
 			<  883200000  755000 221 >,
 			<  960000000  765000 242 >,
 			< 1036800000  775000 264 >,
 			< 1113600000  785000 287 >,
-			< 1190400000  805000 308 >,
-			< 1267200000  815000 333 >,
+			< 1190400000  795000 308 >,
+			< 1267200000  805000 333 >,
 			< 1344000000  815000 356 >,
 			< 1420800000  825000 380 >,
 			< 1497600000  835000 404 >,
@@ -1670,12 +1703,13 @@
 			< 1728000000  860000 482 >,
 			< 1804800000  870000 510 >,
 			< 1881600000  880000 538 >,
-			< 1958400000  900000 565 >,
-			< 2035200000  905000 596 >,
+			< 1958400000  890000 565 >,
+			< 2035200000  895000 596 >,
 			< 2112000000  905000 627 >,
 			< 2188800000  915000 659 >,
-			< 2265600000  935000 691 >,
-			< 2457600000  1070000 800 >;
+			< 2265600000  925000 691 >,
+			< 2496000000 1100000 800 >,
+                        < 2726400000 1150000 910 >;
 	};
 
 	qcom,cpubw {
@@ -1704,21 +1738,22 @@
 		reg = <0 4>;
 		compatible = "qcom,msm-cpufreq";
 		qcom,cpufreq-table =
-			<  300000  300000  572 >,
-			<  422400  422400 1144 >,
-			<  652800  499200 1525 >,
-			<  729600  576000 2342 >,
-			<  883200  576000 2342 >,
-			<  960000  960000 3509 >,
-			< 1036800 1036800 3509 >,
-			< 1190400 1036800 3509 >,
-			< 1267200 1267200 4684 >,
-			< 1497600 1497600 4684 >,
-			< 1574400 1574400 6103 >,
-			< 1728000 1651200 6103 >,
-			< 1958400 1728000 7102 >,
-			< 2265600 1728000 7102 >,
-			< 2457600 1728000 7102 >;
+			<  300000  300000  600 /*  75 MHz */ >,
+			<  422400  422400 1200 /* 150 MHz */ >,
+			<  652800  499200 1600 /* 200 MHz */ >,
+			<  729600  576000 2456 /* 307 MHz */ >,
+			<  883200  576000 2456 /* 307 MHz */ >,
+			<  960000  960000 3680 /* 460 MHz */ >,
+			< 1036800 1036800 3680 /* 460 MHz */ >,
+			< 1190400 1036800 3680 /* 460 MHz */ >,
+			< 1267200 1267200 4912 /* 614 MHz */ >,
+			< 1497600 1497600 4912 /* 614 MHz */ >,
+			< 1574400 1574400 6400 /* 800 MHz */ >,
+			< 1728000 1651200 6400 /* 800 MHz */ >,
+			< 1958400 1728000 7448 /* 931 MHz */ >,
+			< 2265600 1728000 7448 /* 931 MHz */ >,
+                        < 2496000 1728000 7448 >,
+                        < 2726400 1728000 7448 >;
 	};
 
 	usb3: qcom,ssusb@f9200000 {
@@ -1819,23 +1854,23 @@
 		compatible = "qcom,msm-audio-ion";
 	};
 
-	qti,msm-pcm {
-		compatible = "qti,msm-pcm-dsp";
-		qti,msm-pcm-dsp-id = <0>;
+	qcom,msm-pcm {
+		compatible = "qcom,msm-pcm-dsp";
+		qcom,msm-pcm-dsp-id = <0>;
 	};
 
-	qti,msm-pcm-low-latency {
-		compatible = "qti,msm-pcm-dsp";
-		qti,msm-pcm-dsp-id = <1>;
-		qti,msm-pcm-low-latency;
-		qti,latency-level = "regular";
+	qcom,msm-pcm-low-latency {
+		compatible = "qcom,msm-pcm-dsp";
+		qcom,msm-pcm-dsp-id = <1>;
+		qcom,msm-pcm-low-latency;
+		qcom,latency-level = "regular";
 	};
 
-	qti,msm-pcm-jack-low-latency {
-		compatible = "qti,msm-pcm-dsp";
-		qti,msm-pcm-dsp-id = <2>;
-		qti,msm-pcm-low-latency;
-		qti,latency-level = "regular";
+	qcom,msm-pcm-jack-low-latency {
+		compatible = "qcom,msm-pcm-dsp";
+		qcom,msm-pcm-dsp-id = <2>;
+		qcom,msm-pcm-low-latency;
+		qcom,latency-level = "regular";
 	};
 
 	qcom,msm-pcm-routing {
@@ -1883,8 +1918,8 @@
 		compatible = "qcom,msm-lsm-client";
 	};
 
-	qti,msm-pcm-loopback {
-		compatible = "qti,msm-pcm-loopback";
+	qcom,msm-pcm-loopback {
+		compatible = "qcom,msm-pcm-loopback";
 	};
 
 	qcom,msm-dai-q6 {
@@ -2276,8 +2311,7 @@
 
 	qcom,msm-rtb {
 		compatible = "qcom,msm-rtb";
-		qcom,memory-reservation-type = "EBI1";
-		qcom,memory-reservation-size = <0x100000>; /* 1M EBI1 buffer */
+		qcom,rtb-size = <0x100000>; /* 1M EBI1 buffer */
 	};
 
 	qcom,msm-contig-mem {
@@ -2418,11 +2452,6 @@
 		reg = <0xfc834000 0x7000>;
 		interrupts = <0 29 1>;
 		qcom,rx-ring-size = <64>;
-	};
-
-	memory_hole: qcom,msm-mem-hole {
-		compatible = "qcom,msm-mem-hole";
-		qcom,memblock-remove = <0x6c00000 0xa600000>; /* Address and Size of Hole */
 	};
 
 	ram_console {
