--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -598,11 +598,12 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-6.6"
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.2"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_INTELLI_PLUG=y
 CONFIG_MSM_HOTPLUG=y
+
 
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
