--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -744,6 +744,9 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_KERNEL_MODE_NEON=y
 
 CONFIG_TOUCH_WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLE_TAP_TO_WAKE=y
+CONFIG_LCD_NOTIFY=y
+
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_HAVE_KERNEL_GZIP=y
