--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -746,6 +746,9 @@ CONFIG_KERNEL_MODE_NEON=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_TOUCHSCREEN_DOUBLE_TAP_TO_WAKE=y
 CONFIG_LCD_NOTIFY=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_SCHED_SMT=y
 
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
