--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -598,7 +598,7 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.2"
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.4"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_INTELLI_PLUG=y
@@ -744,7 +744,9 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_KERNEL_MODE_NEON=y
 
 CONFIG_TOUCH_WAKE=y
-CONFIG_TOUCHSCREEN_DOUBLE_TAP_TO_WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+CONFIG_WAKE_TIMEOUT=y
 CONFIG_LCD_NOTIFY=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_CPU_VOLTAGE_TABLE=y
@@ -764,3 +766,10 @@ CONFIG_SYSVIPC_SYSCTL=y
 
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
+
+CONFIG_MISC_FILESYSTEMS=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
