--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -766,6 +766,10 @@ CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 
+CONFIG_CPU_OC=y
+CONFIG_OC_ULTIMATE=y
+CONFIG_TURBO_BOOST=y
+
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
