update Max Screen Off

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -768,6 +768,7 @@ CONFIG_CPU_OC=y
 CONFIG_OC_ULTIMATE=y
 CONFIG_TURBO_BOOST=y
 CONFIG_MSM_CPUFREQ_LIMITER=y
+CONFIG_MSM_SLEEPER=y
 
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_F2FS_FS=y
