Add conservative governor and bump kernel version to beta v7.8.5

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -599,7 +599,7 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.8.1"
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.8.5"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_INTELLI_PLUG=y
@@ -747,6 +747,7 @@ CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_WAKE_TIMEOUT=y
 CONFIG_LCD_NOTIFY=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SCHED_SMT=y
 
