--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -633,6 +633,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSV2 is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -668,6 +669,7 @@ CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
+CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
