--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -753,6 +753,10 @@ CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SCHED_SMT=y
 
+CONFIG_ZRAM=y
+CONFIG_ZRAM_DEBUG=y
+CONFIG_ZSMALLOC=y
+# CONFIG_PGTABLE_MAPPING is not set
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_HAVE_KERNEL_GZIP=y
