enabled LZO/LZ4 (de)compression in defconfig

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -753,6 +753,10 @@ CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SCHED_SMT=y
 
+CONFIG_RD_LZO=y
+CONFIG_RD_LZ4=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEBUG=y
 CONFIG_ZSMALLOC=y
