--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -109,6 +109,8 @@ CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
 
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_LADDER=y
+CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
@@ -599,7 +601,7 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.8.5"
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Beta-U-7.9"
 CONFIG_LOCALVERSION_AUTO=n
 
 CONFIG_INTELLI_PLUG=y
@@ -634,18 +636,18 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSV2 is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_FREQ_GOV_UBERDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-# CONFIG_CPU_FREQ_GOV_SMARTASSH3 is not set
-# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
@@ -654,7 +656,7 @@ CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
 CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-# CONFIG_CPU_FREQ_GOV_ABYSSPLUG is not set
+CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
 CONFIG_CPU_FREQ_GOV_ABYSSPLUGV2=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
@@ -664,12 +666,14 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
+#CONFIG_CPU_FREQ_GOV_BRAZILIANWAX is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_CPU_FREQ_MSM=y
 
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
