--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -327,7 +327,7 @@ CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_INTELLI_THERMAL=y
-CONFIG_THERMAL_MONITOR=y
+CONFIG_THERMAL_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9320_CODEC=y
@@ -674,6 +674,16 @@ CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_SMARTASSV2_SLEEP_IDEAL_FREQ=1190400
+CONFIG_SMARTASSV2_AWAKE_IDEAL_FREQ=300000
+CONFIG_SMARTASSV2_RAMP_UP_STEP=249600
+CONFIG_SMARTASSV2_RAMP_DOWN_STEP=249600
+CONFIG_SMARTASSV2_MAX_CPU_LOAD=50
+CONFIG_SMARTASSV2_MIN_CPU_LOAD=25
+CONFIG_SMARTASSV2_UP_RATE_US=48000
+CONFIG_SMARTASSV2_DOWN_RATE_US=99000
+CONFIG_SMARTASSV2_SLEEP_WAKEUP_FREQ=99999999
+CONFIG_SMARTASSV2_SAMPLE_RATE_JIFFIES=2
 CONFIG_CPU_FREQ_MSM=y
 
 CONFIG_IOSCHED_NOOP=y
