--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -765,6 +765,8 @@ CONFIG_WAKE_TIMEOUT=y
 CONFIG_LCD_NOTIFY=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_OVERCLOCK=y
+CONFIG_CPU_UNDERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SCHED_SMT=y
 
