--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -274,7 +274,16 @@ config CPU_FREQ_DEFAULT_GOV_BADASS
 config CPU_FREQ_DEFAULT_GOV_DANCEDANCE
 	bool "dancedance"
 	select CPU_FREQ_GOV_DANCEDANCE
-	help
+    help
+
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+	  bool "zzmoove"
+	  select CPU_FREQ_GOV_ZZMOOVE
+	  select CPU_FREQ_GOV_PERFORMANCE
+	  help
+	  Use the CPUFreq governor 'zzmoove' as default, using predefined
+	  frequency lookup tables and optimized scaling triggers instead of
+	  % frequency steps to get smooth up/downscaling dependant on CPU load.
 
 config CPU_FREQ_DEFAULT_GOV_SMARTASSV2
 	bool "smartass2"
@@ -283,15 +292,15 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASSV2
 		Use the CPUFreq governor 'smartassV2' as default.
 
 config CPU_FREQ_DEFAULT_GOV_LAGFREE
-        bool "lagfree"
-        select CPU_FREQ_GOV_LAGFREE
-        help
-          Use the CPUFreq governor 'lagfree' as default. This allows
-          you to get a full dynamic frequency capable system by simply
-          loading your cpufreq low-level hardware driver.
-          Be aware that not all cpufreq drivers support the lagfree
-          governor. If unsure have a look at the help section of the
-          driver. Fallback governor will be the performance governor.
+       bool "lagfree"
+       select CPU_FREQ_GOV_LAGFREE
+       help
+       Use the CPUFreq governor 'lagfree' as default. This allows
+       you to get a full dynamic frequency capable system by simply
+       loading your cpufreq low-level hardware driver.
+       Be aware that not all cpufreq drivers support the lagfree
+       governor. If unsure have a look at the help section of the
+       driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE
 	bool "intelliactive"
@@ -399,7 +408,7 @@ config CPU_FREQ_GOV_HYPER
 	depends on CPU_FREQ
 	---help---
 	  'hyper' - A tweaked "ondemand" based smart and smooth optimized governor!
-	
+
 	   If in doubt, say N.
 
 config CPU_FREQ_GOV_INTELLIDEMAND
@@ -571,8 +580,6 @@ config CPU_FREQ_GOV_POWERSAVE
 
 	  If in doubt, say Y.
 
-
-
 config CPU_FREQ_GOV_USERSPACE
 	tristate "'userspace' governor for userspace frequency scaling"
 	help
@@ -607,8 +614,8 @@ config CPU_FREQ_GOV_ONDEMANDPLUS
 	 If in doubt, say N.
 
 config CPU_FREQ_GOV_ABYSSPLUG
-        tristate "'abyssplug' cpufreq governor"
-        depends on CPU_FREQ && NO_HZ && HOTPLUG_CPU
+       tristate "'abyssplug' cpufreq governor"
+       depends on CPU_FREQ && NO_HZ && HOTPLUG_CPU
         ---help---
          'abyssplug' - this driver mimics the frequency scaling behavior
          in 'ondemand', but with several key differences. First is
@@ -645,8 +652,8 @@ config CPU_FREQ_GOV_ABYSSPLUGV2
 config CPU_FREQ_GOV_SMARTASSH3
         tristate "'smartassH3' cpufreq governor"
         depends on CPU_FREQ
-        help
-                    'smartassH3' - a "smart" governor
+         help
+         'smartassH3' - a "smart" governor
 
 config CPU_FREQ_GOV_WHEATLEY
 	tristate "'wheatley' cpufreq governor"
@@ -767,11 +774,21 @@ config CPU_FREQ_GOV_LAZY
 config CPU_FREQ_GOV_DARKNESS
 	tristate "'darkness' cpufreq policy governor"
 
+config CPU_FREQ_GOV_ZZMOOVE
+	tristate "'zzmoove' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'zzmoove' - based on cpufreq_conservative, using predefined
+	  frequency lookup tables and optimized scaling triggers instead of
+	  % frequency steps to get smooth up/downscaling dependant on CPU load.
+
+	  If in doubt, say N.
+
 
 config CPU_FREQ_GOV_SMARTMAX
-        tristate "'smartmax' cpufreq policy governor"
-        select CPU_FREQ_TABLE
-        help
+       tristate "'smartmax' cpufreq policy governor"
+       select CPU_FREQ_TABLE
+       help
           'smartmax' combined ondemand and smartass2
 
 config CPU_FREQ_GOV_SMARTMAX_TEGRA
