update configs again

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -781,12 +781,13 @@ CONFIG_CPU_UNDERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SCHED_SMT=y
 
+CONFIG_ZRAM_LZ4=y
 CONFIG_RD_LZO=y
 CONFIG_RD_LZ4=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_DEBUG=y
+CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 CONFIG_CRYPTO_LZO=y
