--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -698,3 +698,15 @@ CONFIG_POWERSUSPEND=y
 CONFIG_MSM_SLEEPER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPUFREQ_LIMITER=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
+CONFIG_MDNIE_LITE_CONTROL=y
+CONFIG_CPUFREQ_HARDLIMIT=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
+CONFIG_TURBO_BOOST=y
+CONFIG_KRAIT_REGULATOR=y
+CONFIG_CPU_OVERCLOCK=y
+CONFIG_TOUCH_WAKE=y
