add alucard hotplug

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -601,6 +601,7 @@ CONFIG_LOCALVERSION="-ZION-cm11-hlte-Unified-M-v0.5"
 
 CONFIG_INTELLI_PLUG=y
 CONFIG_MSM_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG=y
 
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
@@ -749,3 +750,6 @@ CONFIG_MSM_CPU_FREQ_MIN=300000
 CONFIG_HOTPLUG_CPU=y
 CONFIG_MSM_IOMMU_VBIF_CHECK=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
+
+# CONFIG_ALUCARD_HOTPLUG_THERMAL is not set
+CONFIG_ALUCARD_HOTPLUG_USE_CPU_UTIL=y
