--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -815,7 +815,8 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_CPU_OC=y
 CONFIG_OC_ULTIMATE=y
 CONFIG_TURBO_BOOST=y
-CONFIG_MSM_CPUFREQ_LIMITER=y
+# CONFIG_MSM_CPUFREQ_LIMITER is not set
+CONFIG_CPUFREQ_HARDLIMIT=y
 CONFIG_MSM_SLEEPER=y
 
 CONFIG_MISC_FILESYSTEMS=y
